--- a/src/pages/slot/slot.css
+++ b/src/pages/slot/slot.css
@@ -236,6 +236,31 @@
     padding: 8px 30px;
     border: 6px double #000;
   }
+
+  .no-slot {
+    background-color: #000000b7;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .doctor-img {
+      width: 70%;
+    }
+  }
+
+  .no-slot-btn {
+    /* background-color: red; */
+    position: absolute;
+    right: 22%;
+    bottom: 20%;
+    width: 7%;
+  }
+  .d-none {
+    display: none;
+  }
 }
 
 .a-button {
