--- a/src/pages/slot/slot.css
+++ b/src/pages/slot/slot.css
@@ -257,6 +257,8 @@
     right: 22%;
     bottom: 20%;
     width: 7%;
+    transition: none;
+    animation: none;
   }
   .d-none {
     display: none;
