--- a/src/pages/dictionary/dictionary.css
+++ b/src/pages/dictionary/dictionary.css
@@ -26,7 +26,6 @@ body {
   padding: 20px;
   box-sizing: border-box;
   color: #ffffff;
-  font-family: 'pixeled';
 }
 
 /* 도감 전체 영역 */
@@ -41,14 +40,14 @@ body {
 /* 도감 헤더 */
 .pokedex-header {
   position: relative; /* 중앙 정렬 및 포지셔닝 기준 */
-  height: 115px;
+  text-align: center;
   margin-bottom: 40px;
 }
 
 /* ST: 뒤로가기, 음소거 버튼 */
 .back-btn {
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 0;
   height: 51%;
   aspect-ratio: 1/1;
@@ -59,8 +58,8 @@ body {
 }
 .toggle-sound {
   position: absolute;
-  top: 50%;
-  left: 15%;
+  top: 55%;
+  right: 0;
   height: 51%;
   aspect-ratio: 1/1;
   translate: 0 -50%;
@@ -72,32 +71,14 @@ body {
 
 /* 로고는 정중앙 고정 */
 .logo {
-  position: absolute;
-  left: 52%;
-  transform: translateX(-50%);
-  font-family: 'Pixeled';
-  font-size: 24px;
-}
-
-/* 포켓볼은 오른쪽 끝에 배치 */
-.pokeball {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.pokeball img {
-  width: 50px;
-  height: 50px;
-  animation: bounce-vertical 1.2s ease-in-out infinite;
+  display: inline-block;
 }
 
 /* 검색창 */
 /* 기존 유지 */
 .search-bar {
   display: flex;
-  gap: 5px;
+  gap: 10px;
   margin-bottom: 20px;
   width: 100%;
   height: auto;
@@ -148,16 +129,37 @@ body {
   flex: 0 0 auto;
 }
 /* 도감 내용 영역 */
+.pokedex-content-wrapper {
+  position: relative;
+  flex: 1;
+  padding: 10px;
+  border: 9px solid #000;
+  border-radius: 4px;
+  background-color: white;
+  overflow-y: auto;
+}
+
+/* 포켓볼은 우측 하단에 배치 */
+.pokeball {
+  position: sticky;
+  right: 0;
+  bottom: 0;
+}
+
+.pokeball > img {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  animation: bounce-vertical 1.2s ease-in-out infinite;
+  cursor: pointer;
+}
+
 .pokedex-content {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 10px;
-  padding: 10px;
-  background-color: white;
-  overflow-y: auto;
-  flex: 1;
-  border: 9px solid #000;
-  border-radius: 4px;
 }
 
 /* 포켓몬 카드 */
@@ -166,37 +168,49 @@ body {
   border-radius: 8px;
   border: 2px solid #000;
   text-align: center;
-  padding: 10px;
-  font-family: 'Pixeled';
+  padding: 15px;
   height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
-.pokemon-card img {
-  image-rendering: pixelated;
+.poke-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 90px;
   height: 90px;
 }
 
-.poke-num {
-  font-weight: bold;
+.poke-img img {
+  scale: 1.4;
+}
+.hidden-card-777 .poke-img img,
+.hidden-card-888 .poke-img img {
+  scale: 1;
+}
 
+.poke-num {
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: bold;
   color: white;
-  font-size: 15px;
 }
 
 .poke-name {
+  margin-top: 6px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 18px;
   color: white;
-  font-size: 15px;
 }
 
 .poke-types {
   color: white;
-  margin-top: 4px;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .pokemon-card.empty {
@@ -230,10 +244,9 @@ body {
 }
 
 .pokemon-card.unrevealed .poke-num {
-  font-size: 50px;
+  font-size: 60px;
   color: #555;
-  margin-bottom: 15px;
-  margin-left: 5px;
+  margin-bottom: 5px;
 }
 
 /* 포켓볼 bounce 애니메이션 */
@@ -300,60 +313,90 @@ body {
   cursor: pointer;
   transition: 0.2s;
 }
-@media (max-width: 505px) {
+
+@media (max-width: 640px) {
   .pokedex-header {
+    margin-bottom: 20px;
+  }
+
+  .back-btn,
+  .toggle-sound {
+    position: absolute;
+    top: 55%;
+    translate: 0 -50%;
+    height: 40px;
+    aspect-ratio: 1 / 1;
+    background-size: cover;
+    z-index: 10;
+  }
+  .logo img {
+    width: 200px;
+  }
+
+  .search-bar {
+    display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 10px;
+  }
+  .input-group {
+    width: 100%;
+  }
+  .input-group input {
+    height: 45px;
+    font-size: 16px;
+  }
+
+  .search-bar select {
+    height: 45px;
+    font-size: 16px;
   }
 
   .pokeball img {
     width: 40px;
     height: 40px;
   }
-
-  .logo {
-    text-align: center;
-    height: 100px;
+  .pokedex-content {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   }
 
-  @media (max-width: 505px) {
-    .search-bar {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .input-group {
-      width: 100%;
-    }
-    .search-bar select {
-      width: 100%;
-      margin: 0;
-    }
-    .logo img {
-      width: 200px;
-      margin-left: 15px;
-    }
+  .pokemon-card {
+    height: 170px;
+    padding: 5px;
   }
-  @media (max-width: 800px) {
-    .back-btn,
-    .toggle-sound {
-      position: absolute;
-      top: 50%;
-      translate: 0 -50%;
-      height: 36px;
-      aspect-ratio: 1 / 1;
-      background-size: cover;
-      z-index: 10;
-    }
 
-    .back-btn {
-      left: 8px;
-    }
-
-    .toggle-sound {
-      left: 50px;
-    }
+  .poke-img {
+    width: 75px;
+    height: 75px;
   }
+
+  .poke-img img {
+    scale: 1.2;
+  }
+
+  .poke-num {
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+  }
+
+  .poke-name {
+    margin-top: 6px;
+    gap: 4px;
+    font-size: 14px;
+    color: white;
+  }
+
+  .poke-types {
+    color: white;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 420px) {
+  /* .logo {
+    width: 160px;
+  } */
 }
 
 /* 타입별 색상 */
