--- a/src/pages/dictionary/dictionary.css
+++ b/src/pages/dictionary/dictionary.css
@@ -497,7 +497,7 @@ body {
 #card-modal {
   position: fixed;
   inset: 0;
-  display: flex; /* 중앙 정렬 위해 반드시 필요 */
+  display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.7);
@@ -523,4 +523,62 @@ body {
 
 .hidden {
   display: none !important;
+}
+.modal {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.notice-modal-content {
+  position: relative; /* 기준점 */
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  position: relative;
+}
+
+.modal-content img {
+  width: 70%;
+  display: block;
+}
+
+.notice-buttons {
+  position: absolute;
+  bottom: 25%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 10;
+}
+
+.left-buttons {
+  display: flex;
+  gap: 30px;
+}
+
+.right-button img {
+  margin-left: 10px;
+}
+
+.notice-buttons img {
+  width: 70px;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
 }
