--- a/src/pages/dictionary/dictionary.css
+++ b/src/pages/dictionary/dictionary.css
@@ -15,6 +15,7 @@ body {
 }
 
 .dictionary {
+  position: relative;
   margin: 0 auto;
   width: 100%;
   max-width: 980px;
@@ -143,7 +144,7 @@ body {
 .pokeball {
   position: sticky;
   right: 0;
-  bottom: 0;
+  top: 100%;
 }
 
 .pokeball > img {
@@ -534,6 +535,9 @@ body {
   z-index: 9999;
 }
 
+#notice-modal {
+  position: absolute;
+}
 .notice-modal-content {
   position: relative; /* 기준점 */
   width: 100%;
@@ -544,41 +548,47 @@ body {
   align-items: center;
 }
 
-.modal-content {
-  position: relative;
-}
-
-.modal-content img {
-  width: 70%;
+.notice-modal-content .notice-img {
+  width: 60%;
   display: block;
 }
 
 .notice-buttons {
   position: absolute;
-  bottom: 25%;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
-  width: 400px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 10;
+  translate: -50% 200%;
+  width: 46%;
+  height: 85px;
 }
 
-.left-buttons {
-  display: flex;
-  gap: 30px;
-}
+.notice-buttons button {
+  position: absolute;
 
-.right-button img {
-  margin-left: 10px;
-}
-
-.notice-buttons img {
-  width: 70px;
   cursor: pointer;
+  width: 16%;
+}
+
+.notice-buttons button:nth-child(1) {
+  left: 0;
+  bottom: 20%;
+}
+.notice-buttons button:nth-child(2) {
+  left: 20%;
+  bottom: 20%;
+}
+
+.right-button {
+  right: 0;
+  bottom: 0;
 }
 
 .hidden {
   display: none;
+}
+
+@media (max-width: 980px) {
+  .notice-buttons {
+    height: 8.5vw;
+  }
 }
