--- a/src/pages/slot/slot.css
+++ b/src/pages/slot/slot.css
@@ -266,16 +266,14 @@
 }
 
 .a-button {
-  width: 13%;
-  aspect-ratio: 1/1;
-  /* height: 5%; */
-  /* background: gold; */
-  position: absolute;
   display: none;
-  z-index: 9999999999;
-  top: 73%; /* 혹은 85% 정도? 원하는 위치 조정 */
-  right: 18%;
-  /* transform: translate(-50%, 0); */
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  translate: 231% 269%;
+  width: 14%;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
 }
 @media screen and (max-width: 640px) {
   .a-button {
